stop code overflow-x

--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -164,6 +164,13 @@ pre,
 samp {
     font-family: monospace, serif;
     font-size: 1em;
+    overflow-x: scroll;
+    white-space: nowrap;
+    word-wrap: normal;
+    -moz-hyphens:none;
+    -ms-hyphens:none;
+    -webkit-hyphens:none;
+    hyphens:none;
 }
 
 /**
